[package]
name = "anagram_web_api"
version = "0.1.0"
authors = ["rstular <rok@stular.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0"
const_format = "0.2.4"
serde_json = "1.0"
r2d2_redis = "0.14.0"
lazy_static = "1.4.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
